Fix tooltips being too narrow, another random fatal
Auditors: haoyi

--- a/webapp/css/basics.less
+++ b/webapp/css/basics.less
@@ -130,3 +130,7 @@ div.inlinePerfExpanded, div.inlinePerfExpanded:hover {
 div.popover {
   max-width: none;
 }
+
+div.tooltip-inner {
+  max-width: 400px;
+}
